[package]
name = "closed-loop-finance"
version = "0.1.0"
edition = "2021"
authors = ["Shyam Desigan <sam@cubiczan.com>"]
license = "MIT"
description = "Autonomous closed-loop finance system: Observe-Decide-Execute-Learn cycle with PID control"

[dependencies]
cubiczan-ml-core = { path = "../cubiczan-ml/crates/cubiczan-ml-core" }
cubiczan-ml-rl = { path = "../cubiczan-ml/crates/cubiczan-ml-rl" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
