[package]
name = "closed-loop-finance"
version = "0.1.0"
edition = "2021"
authors = ["Shyam Desigan <sam@cubiczan.com>"]
license = "MIT"
description = "Autonomous closed-loop finance system: Observe-Decide-Execute-Learn cycle with PID control"

[dependencies]
cubiczan-ml-core = { git = "https://github.com/icohangar-ops/cubiczan-ml" }
cubiczan-ml-rl = { git = "https://github.com/icohangar-ops/cubiczan-ml" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
